vi-mode: fix normal mode "s" command repeat

make "4sfoo\\esc" work as expected

BUG: 328044
REVIEW: 114205